Dropdown text cut off fix
Issue-ID: SDC-932

--- a/openecomp-ui/resources/scss/bootstrap-cust/_forms.scss
+++ b/openecomp-ui/resources/scss/bootstrap-cust/_forms.scss
@@ -22,6 +22,9 @@
   &:hover {
     border-color: $gray;
   }
+  &.custom-select {
+    padding-top: 3px;
+  }
 }
 
 label {
